# simple-proxy

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
app/: __main__.py  aggregate.py  app.py  args.py  deep_find.py
tests/: test_clean_html.py
tests/files/: uborka.html
