[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jmarkin <yurmarkin97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
beautifulsoup4 = "^4.9.3"
lxml = "^4.5.2"
emojis = "^0.6.0"
esprima = "^4.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
pytest = "^5.4.3"
pytest-cov = "^2.8.1"
black = "^20.8b1"
flake8 = "^3.8.4"
pytest-pythonpath = "^0.7.3"
pytest-env = "^0.6.2"
ipython = "^7.18.1"
nuitka = "^0.6.9"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '/(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist|\.pytest_cache)/'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
